--- a/PizzaStoreApi/appsettings.json
+++ b/PizzaStoreApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PizzaStore": "Server=.;Database=PizzaStore@2;user id=user;password=123456"
+  }
 }
