--- a/Schema/appsettings.json
+++ b/Schema/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PizzaStore": "Server=.;Database=PizzaStore@2;Trusted_Connection=True;user id=user;password=123456"
-  }
+    "PizzaStore": "Server=.;Database=PizzaStore@2;user id=user;password=123456"}
 }
