--- a/PizzaStoreApi/PizzaStoreApi.csproj
+++ b/PizzaStoreApi/PizzaStoreApi.csproj
@@ -1,12 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentMigrator.Extensions.Postgres" Version="3.2.17" />
+        <PackageReference Include="Mapster" Version="7.2.0" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
+        <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.8.3" />
+        <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.8.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PizzaStore.Data\DatabaseGeneric\PizzaStore.Data.csproj" />
+      <ProjectReference Include="..\PizzaStore.Data\DatabaseSpecific\PizzaStore.DataDBSpecific.csproj" />
+      <ProjectReference Include="..\PizzaStore.Data\ViewModels.Persistence\ViewModels.Persistence.csproj" />
+      <ProjectReference Include="..\PizzaStore.Data\ViewModels\ViewModels.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Data.SqlClient, Version=2.0.20168.4, Culture=neutral, PublicKeyToken=23ec7fc2d6eaa4a5">
+        <HintPath>..\Schema\bin\Debug\net5.0\Microsoft.Data.SqlClient.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
