--- a/Data/DatabaseSpecific/PizzaStore.DataDBSpecific.csproj
+++ b/Data/DatabaseSpecific/PizzaStore.DataDBSpecific.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>PizzaStore.Data.DatabaseSpecific</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.5.0" />
+    <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.1" />
+    <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.9.1" />
   </ItemGroup>
 </Project>
