Add pizza store Core Project

--- a/PizzaStore.API/PizzaStore.API.csproj
+++ b/PizzaStore.API/PizzaStore.API.csproj
@@ -8,23 +8,26 @@
         <PackageReference Include="FluentMigrator.Extensions.Postgres" Version="3.2.17" />
         <PackageReference Include="Mapster" Version="7.2.0" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
-        <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.8.3" />
-        <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.8.3" />
+        <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.1" />
+        <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.9.1" />
+        <PackageReference Include="Serilog" Version="3.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
         <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\PizzaStore.Data\DatabaseGeneric\PizzaStore.Data.csproj" />
-      <ProjectReference Include="..\PizzaStore.Data\DatabaseSpecific\PizzaStore.DataDBSpecific.csproj" />
-      <ProjectReference Include="..\PizzaStore.Data\ViewModels.Persistence\ViewModels.Persistence.csproj" />
-      <ProjectReference Include="..\PizzaStore.Data\ViewModels\ViewModels.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <Reference Include="Microsoft.Data.SqlClient, Version=2.0.20168.4, Culture=neutral, PublicKeyToken=23ec7fc2d6eaa4a5">
         <HintPath>..\Schema\bin\Debug\net5.0\Microsoft.Data.SqlClient.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Data\DatabaseGeneric\PizzaStore.Data.csproj" />
+      <ProjectReference Include="..\Data\DatabaseSpecific\PizzaStore.DataDBSpecific.csproj" />
+      <ProjectReference Include="..\Data\PizzaStore.Read.Persistence\PizzaStore.Read.Persistence.csproj" />
+      <ProjectReference Include="..\Data\PizzaStore.Read\PizzaStore.Read.csproj" />
+      <ProjectReference Include="..\PizzaStore.Core\PizzaStore.Core.csproj" />
+      <ProjectReference Include="..\PizzaStore.Migration\PizzaStore.Migration.csproj" />
     </ItemGroup>
 
 </Project>
