--- a/PizzaStore/PizzaStore.csproj
+++ b/PizzaStore/PizzaStore.csproj
@@ -8,4 +8,7 @@
     <ItemGroup>
         <PackageReference Include="Spectre.Console" Version="0.41.0" />
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\PizzaStore.Core\PizzaStore.Core.csproj" />
+    </ItemGroup>
 </Project>
